push 2.2.0 changes from apm repos

--- a/etc/search/responses-fields.config
+++ b/etc/search/responses-fields.config
@@ -17,7 +17,7 @@ MetaNames       permission_granted public_flags publish_state
 MetaNames       responseset.authz
 
 # source
-MetaNames       src_uuid src_name src_username src_first_name src_last_name
+MetaNames       src_uuid src_name src_username src_first_name src_last_name src_status
 MetaNameAlias   src_first_name first_name
 MetaNameAlias   src_last_name last_name
 MetaNames       primary_email
@@ -73,7 +73,7 @@ PropertyNames       permission_granted public_flags publish_state
 PropertyNames       responseset.authz
 
 # source
-PropertyNames       src_uuid src_name src_username src_first_name src_last_name
+PropertyNames       src_uuid src_name src_username src_first_name src_last_name src_status
 PropertyNames       src_first_name_lc src_last_name_lc
 PropertyNames       primary_email
 PropertyNames       primary_phone
