--- a/app/fixtures/base/PreferenceType.yml
+++ b/app/fixtures/base/PreferenceType.yml
@@ -3,15 +3,19 @@ PreferenceType:
     pt_id: 1
     pt_name: Contact frequency
     pt_status: A
+    pt_identifier: contact_frequency
   PreferenceType_2:
     pt_id: 2
     pt_name: Contact topic
     pt_status: A
+    pt_identifier: contact_topic
   PreferenceType_3:
     pt_id: 3
     pt_name: Preferred contact method
     pt_status: A
+    pt_identifier: preferred_contact_method
   PreferenceType_4:
     pt_id: 4
     pt_name: Preferred language
     pt_status: A
+    pt_identifier: preferred_language
